--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Lucas Bang
 description: Computer Science Professor at Harvey Mudd College
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://www.cs.hmc.edu/~bang/lucas.png
 #
 # Flags below are optional
 #
